add_subdirectory(grid)
add_subdirectory(containers)
add_subdirectory(quadrature)
add_subdirectory(polynomial)
add_subdirectory(io)
add_subdirectory(functions)
add_subdirectory(timescheme)
add_subdirectory(equations)
add_subdirectory(boundary_conditions)
add_subdirectory(matrix_solvers)
add_subdirectory(materials)
add_subdirectory(preconditioners)
add_subdirectory(chimera)
add_subdirectory(spatial)
add_subdirectory(tools)







# Unit-testing demo case for demonstrating passing and failing tests
#add_subdirectory(demo)
