add_subdirectory(grid)
add_subdirectory(containers)
add_subdirectory(quadrature)
add_subdirectory(polynomial)
add_subdirectory(io)
add_subdirectory(functions)
add_subdirectory(time_scheme)
add_subdirectory(equations)
#add_subdirectory(boundary_conditions)
add_subdirectory(linear_solvers)
add_subdirectory(numerical_methods)
add_subdirectory(materials)
add_subdirectory(preconditioners)
add_subdirectory(chimera)
add_subdirectory(spatial)
add_subdirectory(tools)
add_subdirectory(actions)
add_subdirectory(parallel)







# Unit-testing demo case for demonstrating passing and failing tests
#add_subdirectory(demo)
