add_subdirectory(grid)
add_subdirectory(containers)
add_subdirectory(quadrature)
add_subdirectory(polynomial)
add_subdirectory(io)
add_subdirectory(time_integrators)
add_subdirectory(boundary_conditions)
add_subdirectory(mesh_motion)
#add_subdirectory(equations)
add_subdirectory(linear_solvers)
add_subdirectory(numerical_methods)
#add_subdirectory(preconditioners)
add_subdirectory(chimera)
add_subdirectory(spatial)
add_subdirectory(tools)
add_subdirectory(parallel)
#add_subdirectory(actions)




