add_subdirectory(euler)
add_subdirectory(viscous)
add_subdirectory(bc)
add_subdirectory(spalart_allmaras)
add_subdirectory(geometric_conservation)
add_subdirectory(av_models)
add_subdirectory(laplacian_av)
add_subdirectory(laplacian_anisotropic_av)
add_subdirectory(sst)
add_subdirectory(rstm_ssglrr_lnw)
#add_subdirectory(rans_lowcache)

add_lib_sources(
                eqn_euler.f90
                eqn_euler_av.f90
                eqn_euler_ani_av.f90
                eqn_filtered_euler.f90
                eqn_filtered_euler_FP0.f90
                eqn_filtered_euler_FP1.f90
                eqn_filtered_euler_FP2.f90
                eqn_navier_stokes.f90
                eqn_rans.f90
                eqn_rans_sst.f90
                eqn_rans_rstm.f90
                eqn_rans_cv.f90
                mod_fluid.f90
                mod_force.f90
                mod_entropy.f90
                type_fluid_pseudo_timestep.f90
                model_ideal_gas.f90
                model_ideal_gas_sst.f90
                model_ideal_gas_rstm.f90
                model_shear_stress.f90
                model_reynolds_shear_stress.f90
                model_temperature_gradient.f90
                model_pressure_gradient.f90
                model_sutherlands_law.f90
                model_constant_viscosity.f90
                model_stokes_hypothesis.f90
                model_reynolds_analogy.f90
                model_zero_turbulent_model_fields.f90
                model_zero_reynolds_stress.f90
                model_vorticity.f90
                model_vorticity_magnitude.f90
                model_fluid_wave_speed.f90
                model_velocity_div_curl.f90
                model_velocity_gradient.f90
                model_velocity_gradients.f90
                model_critical_sound_speed.f90
                model_strain_rate.f90
                model_rotation_rate.f90
                )

